# Free-Profile-Evaluation-Backend

./: .dockerignore  .gitignore  Dockerfile  OPTIMIZATION_REPORT.md  VALIDATION_README.md  current_profile_summary.py  docker-compose.yml  improved_prompt.txt  job_descriptions.py  label_mappings.py  main.py  models.py  models_raw.py  output.json  peer_comparison_logic.py  profile_notes_logic.py  pyproject.toml  quick_wins_logic.py  quick_wins_logic_old.py  quick_wins_logic_v2.py  railway.json  render.yaml  run_poc.py  sample_input.json  scoring_logic.py  test_api_live.py  test_comprehensive_quality.py  test_comprehensive_report.py  test_evaluation_scenarios.py  test_job_descriptions_fix.py  test_output.json  test_output_clean.json  test_output_quality.py  test_problematic.json  test_problematic_output.json  test_quick_wins.py  test_quick_wins_comparison.py  test_quick_wins_fix.py  test_score_requirements.py  test_timeline_fix.py  (+4 more)
docs/: COMPREHENSIVE_QUALITY_REPORT.md  COMPREHENSIVE_TEST_SUMMARY.md  FRONTEND_BACKEND_CONNECTION_VERIFICATION.md  IMPROVEMENTS_SUMMARY.md  PERSONALIZATION_UPDATE.md  PRODUCT_AUDIT.md  TEST_RESULTS_SUMMARY.md  VALIDATION_REPORT.md
